# coredump-detector

./: BUILD.bazel  Makefile  PROJECT  README.md  apiserver.yaml  push.sh  violations.report
apiserver.local.config/certificates/: apiserver.crt  apiserver.key
cmd/apiserver/: Dockerfile  main.go  push.sh
cmd/gc/: main.go
cmd/gc/gc/: Dockerfile  main.go  push.sh
cmd/manager/: main.go
config/: apiserver.yaml
config/certificates/: apiserver.crt  apiserver.csr  apiserver.key  apiserver_ca.crt  apiserver_ca.key  apiserver_ca.srl  main  main.go
deploy/: apiserver_template.yaml  coredump_template.yaml  deploy.md  deploy.sh
docs/examples/coredumpendpoint/: coredumpendpoint.yaml
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/coredump/: coredump_getoptions.go  coredumpendpoint_strategy.go  doc.go  dump_coredumpendpoint_rest.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/backend/: storage.go
pkg/backend/options/: options.go
pkg/backend/types/: type.go
pkg/backend/volume/: aws.go  local.go  util.go
pkg/controller/: add_coredumpendpoint.go  controller.go
pkg/controller/coredumpendpoint/: coredumpendpoint_controller.go  coredumpendpoint_controller_suite_test.go  coredumpendpoint_controller_test.go
pkg/gc/: gc.go  util.go
pkg/k8sclient/: client.go
pkg/openapi/: doc.go  openapi_generated.go
pkg/stream/: backend.go  options.go  stream.go
pkg/webhook/: webhook.go
sample/: coredumpendpoint.yaml
test/: coredumpendpoint_template.yaml  deployment_template.yaml  kube.sh  run-test.sh  util.sh
(+48 files in other folders)
